<resources>
    <string name="app_name">+Time</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth">Авторизация</string>
    <string name="login">Логин:</string>
    <string name="pass">Пароль:</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string-array name="list_for_repeat">
    <item>Рабочие дни</item>
    <item>Выходные</item>
    <item>Настраить дни</item>

    </string-array>
    <string-array name="list_for_remind">
        <item>30 мин</item>
        <item>1 час</item>
        <item>1.5 часа</item>

    </string-array>
    <string-array name="list_for_priority">
        <item>Не важно</item>
        <item>Среднее</item>
        <item>Важно</item>
        <item>Очень важно</item>
    </string-array>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="group">введите название группы</string>
    <string name="name_app">Навигатор: к мечте!</string>
    <string name="MyGoal">Моя цель:</string>
    <string name="new_step">Добавить ступень</string>
    <string name="input_text_please">Введите название</string>
    <string name="input_del_please">Ориентировочное кол-во дел</string>
    <string name="enterRemember">Введите напоминание</string>
    <string name="save">Сохранить</string>
    <string name="enter">Войти</string>
    <string name="soon">Ожидается в обновлении</string>
    <string name="registrationTo">Зарегистрироваться</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="password">Придумайте пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="registration">Регистрация</string>
    <string name="email">Ваша электронная почта</string>
    <string name="obrah">Как к вам можно обращаться:</string>
    <string name="text1">&lt;&lt;</string>
    <string name="text2">\>></string>
    <string name="exite">X</string>
    <string name="aboutKILO">🌿 Любая цель должна быть максимально четко и конкретно сформулирована;\n🌿 Формулируйте желания так, чтобы полученный результат можно было легко оценить; если нужно, разбивайте одну большую цель на несколько маленьких;\n🌿 Оцените локализацию в пространстве\n🌿 Время для достижения желаемого должно быть ограничено конкретными сроками;</string>
    <string name="resum">\n\nПолучается сформулировать принцип КИЛО. Который гласит - цель должна быть конкретизована, то есть четко сформулированная(Например, не нюхать розу, а сажать), измерима, сколько, чего, каких ресурсов мне потребуется, чтобы достичь цели; локализована в пространстве(не просто поехать за границу, а в какой город, по какому маршруту), и обязательно должна определена во времени, если Вы не отвечаете на вопрос КОГДА?, то это не случится никогда.</string>
    <string name="textitog">\nИтак, чтобы постоянно добиваться своих целей, важно следовать некоторым правилам при их постановке:</string>
    <string name="text">\n1) Боязнь неудачи. Любой человек, который  придерживается правила «лучше ничего не предпринимать, чем быть осужденным», нацелен на провал. Такие люди скорее будут наблюдать за успехами других, чем самостоятельно ставить цели и делать все возможное, чтобы их добиться.
        \n\n2)Конфликт целей или их размытость. Чтобы достичь желаемого, следует поставить конкретные задачи и двигаться в их направлении. Слишком большое их количество приведет к распылению и неумению сконцентрироваться на чем-то одном. Кроме того, отличайте желания от целей, желание всегда размыто. Ярким примером являются желания «хочу много денег» и «хочу много отдыхать».
       \n\n3)Сравнивание. Добиться поставленной цели никогда не смогут люди, которые постоянно сравнивают себя с более успешными людьми. Таким образом, человек обесценивает собственные достижения и развивает в себе комплекс неполноценности, который становится значительным препятствием на пути к достижению желаемого.
        \n\n4)Потеря мотивации. Если в какой-то момент вы заметили, что устали, и у вас больше нет сил для реализации своей мечты, займитесь самоанализом. Выявите, на что тратится большая часть вашей жизненной энергии. Это могут быть неудачные отношения, конфликты и пр. Найдите то, что будет вас вдохновлять и мотивировать.</string>
    <string name="factory">Факторы мешающие достижению цели:</string>
    <string name="how">Как добиться своей цели?\n</string>
    <string name="GoalIs">Для того, чтобы мечты сбывались, их необходимо перевести в форму целей, " +
    "и упорно трудиться на пути к их достижению." +
    "Цель – это определенный результат, который необходимо достичь. Либо вы выбираете цели, либо цели других выбирают вас. Сформулируйте краткую позитивную формулировку цели: ответив на вопросы: что?, сколько?, где?, когда?</string>
    <string name="labelHowDay">Как прошел ваш день:</string>
    <string name="calendarView">Календарный вид</string>
    <string name="ToWeek">К концу недели:</string>
    <string name="ToMonth">К концу месяца:</string>
    <string name="ToYear">К концу года:</string>
    <string name="saveAndExit">Ответить</string>
    <string name="newnav">чему научился</string>
    <string name="mind">что запомнилось</string>
    <string name="Dela">3 важных дела</string>
    <string name="someAnswers">Ответьте на пару вопросов о вашем дне</string>
    <string name="add">Добавить</string>
    <string name="analizes">анализ</string>
    <string name="my_goal">Моя цель:</string>
    <string name="add_new_goal">новая цель</string>
    <string name="icon">Иконка</string>
    <string name="your_string"><u>Underlined text</u></string>
    <string name="example1">Например: студент в топ ВУЗе</string>
    <string name="OK">Ок</string>
    <string name="Delete">Удалить</string>
    <string name="K">К - </string>
    <string name="I">И - </string>
    <string name="L">Л - </string>
    <string name="O">О - </string>
    <string name="info_to_use">Вот так бы выглядел твой график выполненных дел за неделю, пользуйся приложением в течение 7 дней</string>
    <string name="metka">Иконка</string>
    <string name="KILO">КИЛО</string>
    <string name="input_goal">Введите цель</string>
    <string name="deadline">DeadLine</string>
    <string name="Name">Name</string>
    <string name="what">что?</string>
    <string name="howMach">сколько?</string>
    <string name="where">где?</string>
    <string name="data">Коснитесь, чтобы ввести дату</string>
    <string name="deadline2">До:</string>
    <string name="Data">Дата</string>
    <string name="minder">Напомнить за</string>
    <string name="priority">Приоритет</string>
    <string name="listView">Списочный вид</string>
    <string name="Famile">Семья</string>
    <string name="FamileLabel">Напоминание об коммуникации, звонке, визите, дне рождении</string>
    <string name="Health">Здоровье</string>
    <string name="HealthLabel">Добавляйте знятия спортом, прогулки, пробежки, зарядки</string>
    <string name="GrowUp">Самообразование</string>
    <string name="GrowUpLabel">Чтение книг, духовный рост, приобретение новых навыков</string>
    <string name="Buisness">Бизнес</string>
    <string name="BuisnessLabel">То что Вам приносит доход или в начнет в ближайшем будущем, работа или учеба</string>
    <string name="NameTask">Название дела</string>
    <string name="End">Время конца занятия</string>
    <string name="Start">Время начала занятия</string>
    <string name="plan">План достижения</string>
    <string name="image">Представьте, что ВЫ получите, достигнув своей цели. Запишите:</string>
    <string name="info_about_step">Добавьте контрольные точки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_sign_up">SignUp</string>
    <string name="app_name_time">Иду к цели!</string>
    <string name="input_text">Введите задачу</string>
    <string name="newStep">Добавьте шаг</string>
</resources>
