<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/MyGoal"
            android:textSize="140px"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:hint="@string/input_goal"
        android:textColorHint="#6221d8">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/task_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:textColor="#6221d8"
            android:textColorHint="#6221d8" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@drawable/gray_line" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/KILO"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/helpAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tx"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/info22" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/label_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/K"
            android:textSize="50dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/label_k"
            android:layout_toRightOf="@+id/label_k"
            android:hint="@string/what"
            android:textColorHint="#6221d8">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/goal_k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textColor="#6221d8"
                android:textColorHint="#6221d8" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/label_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/I"
            android:textSize="50dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/label_i"
            android:hint="@string/howMach"
            android:textColorHint="#6221d8">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/goal_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textColor="#6221d8"
                android:textColorHint="#6221d8" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/label_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/L"
            android:textSize="50dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/label_l"
            android:layout_toRightOf="@+id/label_l"
            android:hint="@string/where"
            android:textColorHint="#6221d8">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/goal_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textColor="#6221d8"
                android:textColorHint="#6221d8" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp">

        <TextView
            android:id="@+id/label_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/O"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goal_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/label_o"
            android:text="@string/data"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/label_o" />


    </RelativeLayout>
</LinearLayout>