<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/someAnswers"
                    android:textSize="18sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/dela" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/label_l"
                android:hint="@string/Dela"
                android:textColorHint="#6221d8">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/important_deal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:maxLines="3"
                    android:textColor="#000000"
                    android:textColorHint="#6221d8" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageViw6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/photo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/label_l"
                android:hint="@string/mind"
                android:textColorHint="#6221d8">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="#000000"
                    android:textColorHint="#6221d8" />

            </android.support.design.widget.TextInputLayout>


            <ImageView
                android:id="@+id/imgageViw6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_education" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/label_l"
                android:hint="@string/newnav"
                android:textColorHint="#6221d8">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="#000000"
                    android:textColorHint="#6221d8" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_end"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_default_green"
                    android:text="@string/saveAndExit"
                    android:textColor="#FFF" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>