<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    tools:ignore="MissingDefaultResource">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/DataTask"
                android:background="@drawable/text_style"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconImage"
                    android:layout_width="30dp"
                    android:layout_height="70dp"

                    app:srcCompat="@drawable/plus" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TaskName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/NameTask" />

                    <TextView
                        android:id="@+id/TaskLong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/End" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/image_bell"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/bell_icon" />

                <TextView
                    android:id="@+id/DataStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_toLeftOf="@+id/image_bell"
                    android:text="@string/Start" />
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>