<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".LoginActivity">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        android:windowSoftInputMode="adjustResize">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@mipmap/ic_icon1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="87dp"
                android:layout_marginTop="10dp"
                android:text="@string/auth"
                android:textColor="@android:color/background_light"
                android:textSize="26sp"
                app:fontFamily="@font/maven_pro_bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/maven_pro_bold"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/input_default"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/maven_pro_bold"
            android:text="@string/pass"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/input_default"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/singIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:background="@drawable/button_default"
            android:text="Войти" />

        <Button
            android:id="@+id/singUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:background="@drawable/button_default"
            android:text="Зарегистрироваться" />
    </LinearLayout>
</FrameLayout>
